Se agrega estilos.css

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
+	<meta charset="utf-8">
 	<title>Fork</title>
+	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
-<h1>PAgina a modificar para el fork</h1>
+	<section class="principal">
+		<h1 class="principal__titulo">Página a modificar para el fork</h1>
+	</section>
 </body>
 </html>
