commit edicion del HTML

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 	<title>Fork</title>
 </head>
 <body>
-<h1>PAgina a modificar para el fork</h1>
+<img src="https://st2.depositphotos.com/5934840/11850/v/950/depositphotos_118503108-stock-illustration-bifurcation-traffic-sign-icon.jpg" height="300" width="300">
+<h1>Pagina a modificar para el fork</h1>
+
+<p>Bifurcación (desarrollo de software), es la acción de crear un proyecto en una dirección diferente a un proyecto ya existente, tomando el código que momentáneamente deja de hacer un proceso para comenzar otro hasta que este culmine para luego seguir en el anterior.</p>
+
 </body>
 </html>
