añadiendo hoja de estilo y arreglando pequeñas mejoras de ortografia

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="estilo.css">
 	<title>Fork</title>
 </head>
 <body>
-<h1>PAgina a modificar para el fork</h1>
+<h1>Pagina a modificar para el fork</h1>
 </body>
 </html>
