--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Fork</title>
+	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
-<h1>PAgina a modificar para el fork</h1>
+<h1>Pagina a modificar para el fork</h1>
+<p>OE OE OE OE OE OE OE  primer parrafo OE OE OE OE OE </p>
 </body>
 </html>
