--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
 	<title>Fork</title>
 </head>
 <body>
-<h1>PAgina a modificar para el fork</h1>
+<h1>Pagina a modificar para el fork</h1>
+    <h2>
+    	<strong>Que logramos con gitHub</strong>
+    </h2>
+    <ol>
+    	<li>Crear aportes con terceros</li>
+    	<li>subir nuestros proyecto para que otros lo vean</li>
+    	<li>facilita el trabajo en equipo</li>
+    	<li>Poder descargar los repositorios de otros</li>
+    </ol>
 </body>
 </html>
